# fastify-uws

./: README.md  biome.json  client-es.mjs  client-fd.mjs  client-ws.mjs  client.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
benchmarks/: README.md  bench.ts  build.ts  bun.ts  config.ts  deno.json  deno.ts  fastify-uws.js  fastify-uws.mjs  fastify.js  fastify.mjs  h3.js  hyper-express.js  node.mjs  package.json  polka.js  result.md  uws.js  uws.mjs  warmUp.ts
benchmarks/bun/: Dockerfile  bun.lockb  bun.ts  elysia.ts  h3.ts  hono.ts  oak.ts  package.json
benchmarks/bun/bun/: Dockerfile  package.json
benchmarks/bun/elysia/: Dockerfile  bun.lockb  package.json
benchmarks/bun/h3/: Dockerfile  bun.lockb  package.json
benchmarks/bun/hono/: bun.lockb  package.json
benchmarks/deno/: Dockerfile  deno.json  drash.ts  h3.ts  hono.ts  oak.ts
benchmarks/node/: Dockerfile  fastify-uws.js  fastify.js  h3.js  hono.js  hyper-express.js  node.js  oak.js  package-lock.json  package.json  polka.js  uws.js
benchmarks/rust/hyper/: Cargo.toml  Dockerfile
benchmarks/rust/hyper/src/: main.rs
examples/: client.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/src/: app.ts  server.ts  shims.d.ts
src/: errors.ts  fastify-uws.ts  http-socket.ts  index.ts  plugin-eventsource.ts  plugin-sse.ts  plugin-websocket.ts  plugin.ts  request.ts  response.ts  server.ts  symbols.ts  websocket-server.ts
src/__tests__/: fd.spec.ts  fd.test.ts  http.spec.ts  http.test.ts  sse.spec.ts  sse.test.ts  ws.spec.ts
(+72 files in other folders)
