[package]
name = "hyper"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
